<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/etiqabgpotrait"
    tools:context="com.motorcalculator.dev.detaffmotorcalculator.InputActivity">

    <LinearLayout
        android:id="@+id/LinearLayout_Coverage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtviewCoverage"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:text="@string/coverage"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/editCoverage"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@android:drawable/screen_background_light_transparent"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_IDNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtviewIDNo"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:text="@string/id_no"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <EditText
            android:id="@+id/editIDNo"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@android:drawable/screen_background_light_transparent"
            android:ems="10"
            android:inputType="number"
            android:text="890617025847" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_Postcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtviewPostcode"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:text="@string/postcode"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editPostcode"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@android:drawable/screen_background_light_transparent"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:text="50000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_VehicleRegNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtviewVehichleRegNo"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:text="@string/vehicle_reg_no"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editVehicleRegNo"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@android:drawable/screen_background_light_transparent"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="WYT8224"
            android:textColor="@android:color/background_dark"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtViewEmail"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:text="@string/email"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@android:drawable/screen_background_light_transparent"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="sam.aljufri@gmail.com" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayout_GrossPremium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_marginTop="320dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtview_GrossPremium"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:text="@string/basic_contribution"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/value_GrossPremium"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@android:drawable/screen_background_light_transparent"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_AfterRebate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtview_AfterRebate"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:text="@string/gross_contribution"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <TextView
            android:id="@+id/value__AfterRebate"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@android:drawable/screen_background_light_transparent"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_Fees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtview_Fees"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:text="@string/contri_after_rebate"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <TextView
            android:id="@+id/value_Fees"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@android:drawable/screen_background_light_transparent"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_AfterGST"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="440dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtview_AfterGST"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:text="@string/gst"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <TextView
            android:id="@+id/value_AfterGST"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@android:drawable/screen_background_light_transparent"
            android:ems="10"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_NetPremium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtview_NetPremium"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:text="@string/total_contribution"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <TextView
            android:id="@+id/value_NetPremium"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@android:drawable/screen_background_light_transparent"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/LinearLayout_Email"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/holo_orange_light"
        android:text="Calculate" />


</RelativeLayout>
